[package]
name = "pomors"
version = "0.1.1"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple CLI pomodoro timer."
readme = "README.md"
homepage = "https://github.com/yuizho/pomors"
repository = "https://github.com/yuizho/pomors"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]
exclude = ["pomors.gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
spin_sleep = "0.3.7"
termion = "1.5.4"
notify-rust = "3.6.3"
