[package]
name = "pomors"
version = "0.2.3"
authors = ["yuizho <yuizho3@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A simple CLI pomodoro timer."
readme = "README.md"
homepage = "https://github.com/yuizho/pomors"
repository = "https://github.com/yuizho/pomors"
keywords = ["cli", "pomodoro"]
categories = ["command-line-utilities"]
exclude = ["pomors.gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.20"
failure = "0.1.8"
exitfailure = "0.5.1"
spin_sleep = "1.0.0"
termion = "1.5.5"
notify-rust = "4.0.0"
rodio = "0.12.0"
